rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest-api
  template:
    metadata:
      labels:
        app: rest-api
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - rest-api
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: rest-api
        image: gcr.io/dcsc2024-437804/rest-api-image:latest
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 300
          timeoutSeconds: 20
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 300
          timeoutSeconds: 20
          successThreshold: 1
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: rest-api
  annotations:
    cloud.google.com/backend-config: '{"default": "rest-api-backend-config"}'
spec:
  type: ClusterIP
  selector:
    app: rest-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
